Adjust database connection

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,9 +11,9 @@ db {
   default {
     migration.auto = true
     driver=org.postgresql.Driver
-    url="jdbc:postgresql:accounting"
-    username="accounting_user"
-    password="wQGHcL3z6U7#xb6AlM%vg&l3a!R44vdC"
+    url="jdbc:postgresql:foodie"
+    username="foodie"
+    password="$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
   }
 }
 
