Start database setup

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,14 @@ cors {
 }
 
 db {
-  default {
+  foodie_nutrition {
+    migration.auto = true
+    driver=org.postgresql.Driver
+    url="jdbc:postgresql:foodie_nutrition"
+    username="foodie"
+    password="$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
+  }
+  foodie {
     migration.auto = true
     driver=org.postgresql.Driver
     url="jdbc:postgresql:foodie"
@@ -19,7 +26,14 @@ db {
 
 slick {
   dbs {
-    default {
+    foodie_nutrition {
+      db.driver=${db.default.driver}
+      driver="slick.driver.PostgresDriver$"
+      db.url=${db.default.url}
+      db.user=${db.default.username}
+      db.password=${db.default.password}
+    }
+    foodie_nutrition {
       db.driver=${db.default.driver}
       driver="slick.driver.PostgresDriver$"
       db.url=${db.default.url}
