--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,3 @@
-# https://www.playframework.com/documentation/latest/Configuration
-
 play.modules.enabled += "org.flywaydb.play.PlayModule"
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
@@ -8,32 +6,19 @@ cors {
 }
 
 db {
-  foodie_nutrition {
+  default {
     migration.auto = true
     driver=org.postgresql.Driver
     url="jdbc:postgresql:foodie_nutrition"
     username="foodie"
     password="$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
-  }
-  foodie {
-    migration.auto = true
-    driver=org.postgresql.Driver
-    url="jdbc:postgresql:foodie"
-    username="foodie"
-    password="$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
+    password=${?FOODIE_DB_DEFAULT_PASSWORD}
   }
 }
 
 slick {
   dbs {
-    foodie_nutrition {
-      db.driver=${db.default.driver}
-      driver="slick.driver.PostgresDriver$"
-      db.url=${db.default.url}
-      db.user=${db.default.username}
-      db.password=${db.default.password}
-    }
-    foodie_nutrition {
+    default {
       db.driver=${db.default.driver}
       driver="slick.driver.PostgresDriver$"
       db.url=${db.default.url}
@@ -43,4 +28,3 @@ slick {
   }
 }
 
-play.evolutions.enabled = false
