Use correct address

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ db {
   default {
     migration.auto = true
     driver=org.postgresql.Driver
-    url="jdbc:postgresql:foodie_nutrition"
+    url="jdbc:postgresql:foodie"
     username="foodie"
     password="$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
     password=${?FOODIE_DB_DEFAULT_PASSWORD}
