Set up configuration for Slick code generator

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,6 +13,8 @@ db {
     username="foodie"
     password="$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
     password=${?FOODIE_DB_DEFAULT_PASSWORD}
+
+    baselineOnMigrate = true
   }
 }
 
@@ -24,7 +26,7 @@ slick {
       db.url=${db.default.url}
       db.user=${db.default.username}
       db.password=${db.default.password}
+      db.baselineOnMigrate=${db.default.baselineOnMigrate}
     }
   }
 }
-
