Add flyway setting

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,10 +13,11 @@ db {
     username="foodie"
     password="$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
     password=${?FOODIE_DB_DEFAULT_PASSWORD}
-
-    baselineOnMigrate = true
   }
 }
+
+# Unclear whether this setting is necessary. It may be, because two schemas are used (cf. Flyway documentation)
+flyway.baselineOnMigrate=true
 
 slick {
   dbs {
@@ -26,7 +27,6 @@ slick {
       db.url=${db.default.url}
       db.user=${db.default.username}
       db.password=${db.default.password}
-      db.baselineOnMigrate=${db.default.baselineOnMigrate}
     }
   }
 }
