Set up basic user retrieval service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,5 @@
 play.modules.enabled += "org.flywaydb.play.PlayModule"
+play.modules.enabled += "modules.ApplicationModule"
 play.filters.enabled += "play.filters.cors.CORSFilter"
 
 cors {
