--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -19,8 +19,10 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: 'sbt'
+      # Technically, we could use 'sbt "Docker / publish"',
+      # but one would need to handle the credentials elsewhere.
       - name: Prepare Docker image
-        run: sbt docker:stage
+        run: sbt "Docker / stage"
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
