Add environment variable for additional hosts (#11)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,9 +4,12 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 
 play.http.secret.key = ${?PLAY_HTTP_SECRET_KEY}
 
-# Todo: Check necessity
+
 cors {
-  allowedOrigins = ["http://localhost:8000"]
+  allowedOrigins = [
+    "http://localhost:8000",
+    ${?FOODIE_BACKEND_HOST}
+  ]
 }
 
 db {
