Set up allowed host for deployment (#12)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,10 +4,8 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 
 play.http.secret.key = ${?PLAY_HTTP_SECRET_KEY}
 
-
-cors {
-  allowedOrigins = [
-    "http://localhost:8000",
+play.filters.hosts {
+  allowed = [
     ${?FOODIE_BACKEND_HOST}
   ]
 }
