Set up frontend (#14)
Set up parts of the front end, and the corresponding deployment action

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ target
 
 # Ignore the deployment file due to possibly sensitive content.
 deployment.env
+/.bsp/sbt.json
+
+# Elm related
+frontend/elm-stuff
