--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,6 @@
 play.modules.enabled += "org.flywaydb.play.PlayModule"
 play.modules.enabled += "modules.ApplicationModule"
+play.filters.enabled += "play.filters.cors.CORSFilter"
 
 play.http.secret.key = ${?PLAY_HTTP_SECRET_KEY}
 
