--- a/.github/workflows/elm.yml
+++ b/.github/workflows/elm.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '16.x'
       - name: Install create-elm-app
-        run: npm install create-elm-app
+        run: npm install create-elm-app && npm audit fix
       - name: Build Elm app with deployment variables
         run: cd frontend && env $(cat deployment.env | xargs) elm-app build
       - name: Set up Docker Buildx
@@ -39,6 +39,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: build
+          context: frontend/build
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
