--- a/.github/workflows/elm.yml
+++ b/.github/workflows/elm.yml
@@ -18,9 +18,9 @@ jobs:
         with:
           node-version: '16.x'
       - name: Install create-elm-app
-        run: npm install create-elm-app
-      - name: Build Elm app with deployment variables
-        run: cd frontend && env $(cat deployment.env | xargs) elm-app build
+        run: npm install create-elm-app -g
+      - name: Build Elm app
+        run: cd frontend && elm-app build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
@@ -39,6 +39,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: frontend/build
+          context: frontend
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
