Another bunch of fixes (#34)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,8 +62,16 @@ userConfiguration {
   restrictedDurationInSeconds = 3600
   restrictedDurationInSeconds = ${?USER_CONFIGURATION_RESTRICTED_DURATION_IN_SECONDS}
 
-  subject = "Foodie registration"
-  subject = ${?USER_CONFIGURATION_SUBJECT}
+  subject {
+    registration = "Foodie registration"
+    registration = ${?USER_CONFIGURATION_SUBJECT_REGISTRATION}
+
+    recovery = "Foodie account recovery request"
+    recovery = ${?USER_CONFIGURATION_SUBJECT_RECOVERY}
+
+    deletion = "Foodie account deletion request"
+    deletion = ${?USER_CONFIGURATION_SUBJECT_DELETION}
+  }
 
   greeting = "Hi"
   greeting = ${?USER_CONFIGURATION_GREETING}
