--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ JWT_CONFIGURATION_SIGNATURE_PRIVATE_KEY=MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSl
 JWT_CONFIGURATION_RESTRICTED_DURATION_IN_SECONDS=86400
 FOODIE_BACKEND_HOST=localhost
 PLAY_MAILER_HOST=localhost
-PLAY_MAILER_FROM=admin@localhost.com
+PLAY_MAILER_FROM=foodie@localhost
