--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    container_name: postgres
+    container_name: foodie-postgres
     restart: always
     image: postgres:12.11-alpine
     env_file:
