--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,14 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: foodie
+          POSTGRES_PASSWORD:
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
@@ -24,3 +32,6 @@ jobs:
           cache: 'sbt'
       - name: Run tests
         run: sbt test
+        env:
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
