--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,22 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_DB: foodie_test
+          POSTGRES_PASSWORD: 2JoGcxcx8ibZrOdQ9y3zv9cJyB20xkvzwlaRC8Vz
+          POSTGRES_PORT: 5432
+          POSTGRES_USER: foodie_test
+        ports:
+          - 5432:5432
+        # set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 11
@@ -22,14 +38,5 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: 'sbt'
-      - uses: harmon758/postgresql-action@v1
-        with:
-          postgresql version: '12'
-          postgresql db: 'foodie_test'
-          postgresql user: 'foodie_test'
-          postgresql password: '2JoGcxcx8ibZrOdQ9y3zv9cJyB20xkvzwlaRC8Vz'
       - name: Run tests
         run: sbt test
-        env:
-          PGPASSWORD: 2JoGcxcx8ibZrOdQ9y3zv9cJyB20xkvzwlaRC8Vz
-          PGUSER: foodie_test
