--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,5 +38,10 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: 'sbt'
+      - name: Populate with CNF data
+        run: | 
+          psql -U foodie_text -d foodie_test -c "grant all privileges on database foodie_test to foodie_test;"
+          psql -U foodie_text -d foodie_test -c "grant pg_read_server_files to 'foodie_test';"
+          psql -U foodie_text -d foodie_test -c "\ir scripts/populate_cnf_db.sql;"
       - name: Run tests
         run: sbt test
