--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,8 @@ jobs:
           distribution: 'temurin'
           cache: 'sbt'
       - name: Populate with CNF data
-        run: | 
+        run: |
+          sudo service postgresql start
           psql -h jdbc:postgres -U foodie_test -d foodie_test -c "grant all privileges on database foodie_test to foodie_test;"
           psql -h jdbc:postgres -U foodie_test -d foodie_test -c "grant pg_read_server_files to 'foodie_test';"
           psql -h jdbc:postgres -U foodie_test -d foodie_test -c "\ir scripts/populate_cnf_db.sql;"
