--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
           cache: 'sbt'
       - name: Populate with CNF data
         run: |
-          sudo service postgresql start
+          sudo systemctl start postgresql.service
           psql -U foodie_test -d foodie_test -c "grant all privileges on database foodie_test to foodie_test;"
           psql -U foodie_test -d foodie_test -c "grant pg_read_server_files to 'foodie_test';"
           psql -U foodie_test -d foodie_test -c "\ir scripts/populate_cnf_db.sql;"
