--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           export PGPASSWORD='2JoGcxcx8ibZrOdQ9y3zv9cJyB20xkvzwlaRC8Vz'
           psql -h localhost -U foodie_test -d foodie_test -c "grant all privileges on database foodie_test to foodie_test;"
-          psql -h localhost -U foodie_test -d foodie_test -c "grant pg_read_server_files to 'foodie_test';"
+          psql -h localhost -U foodie_test -d foodie_test -c "grant pg_read_server_files to foodie_test;"
           psql -h localhost -U foodie_test -d foodie_test -c "\ir scripts/populate_cnf_db.sql;"
       - name: Run tests
         run: sbt test
