Differentiate property tests (with/without DB)

--- a/test/resources/application.conf
+++ b/test/resources/application.conf
@@ -10,6 +10,9 @@ db {
 
 test {
   property {
-    minSuccessfulTests = 5
+    minSuccessfulTests {
+      withDB = 5
+      withoutDB = 100
+    }
   }
 }
