Adjust Scala test workflow to only run, when backend related changes occur

--- a/.github/workflows/scala-tests.yml
+++ b/.github/workflows/scala-tests.yml
@@ -4,9 +4,21 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - app
+      - test
+      - conf
+      - scripts
+      - build.sbt
   pull_request:
     branches:
       - "main"
+    paths:
+      - app
+      - test
+      - conf
+      - scripts
+      - build.sbt
 
 permissions:
   contents: read
