--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - app
+      - test
+      - conf
+      - scripts
+      - build.sbt
 
 permissions:
   contents: read
