Explicitly add recursion

--- a/.github/workflows/scala-tests.yml
+++ b/.github/workflows/scala-tests.yml
@@ -5,19 +5,19 @@ on:
     branches:
       - "main"
     paths:
-      - app
-      - test
-      - conf
-      - scripts
+      - app/**
+      - test/**
+      - conf/**
+      - scripts/**
       - build.sbt
   pull_request:
     branches:
       - "main"
     paths:
-      - app
-      - test
-      - conf
-      - scripts
+      - app/**
+      - test/**
+      - conf/**
+      - scripts/**
       - build.sbt
 
 permissions:
