--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - "main"
     paths:
-      - app
-      - test
-      - conf
-      - scripts
+      - app/**
+      - test/**
+      - conf/**
+      - scripts/**
       - build.sbt
 
 permissions:
