Adjust scalafmt configuration

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,7 @@
 version=3.7.1
 
+runner.dialect = scala213
+
 align=most
 align.preset=more
 
@@ -14,6 +16,5 @@ align.tokens.add = [
 ]
 
 newlines.topLevelStatements = [before, after]
-newlines.alwaysBeforeTopLevelStatements = true
 
 spaces.inImportCurlyBraces = true
