Add constants configuration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,6 +29,11 @@ db {
   }
 }
 
+constants {
+  timeoutInSeconds = 30
+  timeoutInSeconds = ${?CONSTANTS_TIMEOUT_IN_SECONDS}
+}
+
 # Docker has known issues with Play's PID file. The below command disables Play's PID file.
 # cf. https://www.playframework.com/documentation/2.8.x/Deploying#Play-PID-Configuration
 # The setting is a possible duplicate of the same setting in the build.sbt.
