--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ JWT_CONFIGURATION_RESTRICTED_DURATION_IN_SECONDS=86400
 FOODIE_BACKEND_HOST=localhost
 PLAY_MAILER_HOST=localhost
 PLAY_MAILER_FROM=foodie@localhost
+PLAY_MAILER_PORT=1025
