Use Docker credentials

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,11 +20,11 @@ db {
   default {
     migration.auto = true
     driver = org.postgresql.Driver
-    url = "jdbc:postgresql:foodie"
+    url = "jdbc:postgresql://localhost:5433/foodie"
     url = ${?DB_DEFAULT_URL}
     username = "foodie"
     username = ${?DB_DEFAULT_USERNAME}
-    password = "$5tX9#6Uv^@O*1oA5LTHPQCmkNZoJzv!"
+    password = "5oTQvE95MvCuxixEej6zTVUZXfghps7mEg4pLze5"
     password = ${?DB_DEFAULT_PASSWORD}
   }
 }
