--- a/test/resources/application.conf
+++ b/test/resources/application.conf
@@ -2,7 +2,7 @@ db {
   default {
     migration.auto = true
     driver = org.postgresql.Driver
-    url = "jdbc:postgresql:foodie_test"
+    url = "jdbc:postgresql://localhost:5433/foodie_test"
     username = "foodie_test"
     password = "2JoGcxcx8ibZrOdQ9y3zv9cJyB20xkvzwlaRC8Vz"
   }
