--- a/.github/workflows/scala-tests.yml
+++ b/.github/workflows/scala-tests.yml
@@ -34,8 +34,9 @@ jobs:
           POSTGRES_PASSWORD: 2JoGcxcx8ibZrOdQ9y3zv9cJyB20xkvzwlaRC8Vz
           POSTGRES_PORT: 5432
           POSTGRES_USER: foodie_test
+          POSTGRES_HOST: localhost
         ports:
-          - 5432:5433
+          - 5433:5432
         # set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
