--- a/.github/workflows/elm-tests.yml
+++ b/.github/workflows/elm-tests.yml
@@ -1,11 +1,7 @@
 name: Run Elm tests
 
 on:
-  pull_request:
-    branches:
-      - "main"
-    paths:
-      - frontend/**
+  workflow_call:
   workflow_dispatch:
 
 permissions:
