Specify starting point

--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -39,13 +39,13 @@ jobs:
     needs: changes
     # The output is a string, hence the string comparison.
     if: ${{ needs.changes.outputs.back-end-paths-changed == 'true' }}
-    uses: .github/workflows/scala-tests.yml
+    uses: ./.github/workflows/scala-tests.yml
 
   front-end-test:
     needs: changes
     # The output is a string, hence the string comparison.
     if: ${{ needs.changes.outputs.front-end-paths-changed == 'true' }}
-    uses: .github/workflows/elm-tests.yml
+    uses: ./.github/workflows/elm-tests.yml
 
   combine-tests:
     needs:
