--- a/.github/workflows/scala-tests.yml
+++ b/.github/workflows/scala-tests.yml
@@ -28,11 +28,11 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - name: Set up JDK 17
+        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: 'sbt'
         # Workaround: A placeholder test initializes all migrations.
