--- a/.github/workflows/build-and-publish-front-end.yml
+++ b/.github/workflows/build-and-publish-front-end.yml
@@ -15,11 +15,7 @@ jobs:
   package:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-      - name: Determine version
-        id: semantic-version
-        uses: paulhatch/semantic-version@a8f8f59fd7f0625188492e945240f12d7ad2dca3 # v5.4.0
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       - name: Set up Node
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
@@ -51,7 +47,6 @@ jobs:
           tags: |
             type=sha
             type=raw,value=latest
-            type=semver,pattern={{version}}
       - name: Build and push Docker image
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
         with:
