--- a/.github/workflows/build-and-publish-front-end.yml
+++ b/.github/workflows/build-and-publish-front-end.yml
@@ -1,12 +1,11 @@
 name: Build and publish front end
 
 on:
-  push:
-    branches:
-      - "main"
-    paths:
-      - frontend/**
-  workflow_dispatch:
+  workflow_call:
+    inputs:
+      version-tag:
+        type: string
+        required: true
 
 permissions:
   contents: read
@@ -47,6 +46,7 @@ jobs:
           tags: |
             type=sha
             type=raw,value=latest
+            type=semver,pattern={{version}},value=${{ inputs.version-tag }}
       - name: Build and push Docker image
         uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56 # v5.1.0
         with:
