--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
     if: ${{ needs.determine_changes_and_version.outputs.back-end-paths-changed == 'true' }}
     with:
       version-tag: ${{ needs.compute-next-version.outputs.version-tag }}
+    secrets: inherit
 
   build_and_publish_front_end:
     needs: determine_changes_and_version
@@ -53,3 +54,4 @@ jobs:
     if: ${{ needs.determine_changes_and_version.outputs.front-end-paths-changed == 'true' }}
     with:
       version-tag: ${{ needs.compute-next-version.outputs.version-tag }}
+    secrets: inherit
