--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,6 +30,7 @@ db {
 }
 
 constants {
+  # Default value to await 'Future' results. Used only during initialization to cache constant tables.
   timeoutInSeconds = 30
   timeoutInSeconds = ${?CONSTANTS_TIMEOUT_IN_SECONDS}
 }
