--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,6 +60,8 @@ jwtConfiguration {
   signaturePublicKey = ${?JWT_CONFIGURATION_SIGNATURE_PUBLIC_KEY}
   signaturePrivateKey = ${?JWT_CONFIGURATION_SIGNATURE_PRIVATE_KEY}
 
+  # The default value is 24 hours, but this is rather short if the application is used only once a day.
+  # A longer duration (e.g. 14 or 30 days) is more user-friendly.
   restrictedDurationInSeconds = 86400
   restrictedDurationInSeconds = ${?JWT_CONFIGURATION_RESTRICTED_DURATION_IN_SECONDS}
 }
