--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  determine_changes_and_version:
+  create_new_version:
     runs-on: ubuntu-latest
     outputs:
       version-tag: ${{ steps.semantic-version.outputs.version_tag }}
@@ -40,21 +40,28 @@ jobs:
           filters: |
             front-end-src:
               - 'frontend/**'
+      - name: Publish new release
+        shell: bash
+        run: |
+          git tag ${{ steps.semantic-version.outputs.version_tag }} ${{ github.sha }}
+          git push origin ${{ steps.semantic-version.outputs.version_tag }}
+          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+          gh release create ${{ steps.semantic-version.outputs.version_tag }} --generate-notes --verify-tag
 
   build_and_publish_back_end:
-    needs: determine_changes_and_version
+    needs: create_new_version
     uses: ./.github/workflows/build-and-publish-back-end.yml
     # The output is a string, hence the string comparison.
-    if: ${{ needs.determine_changes_and_version.outputs.back-end-paths-changed == 'true' }}
+    if: ${{ needs.create_new_version.outputs.back-end-paths-changed == 'true' }}
     with:
-      version-tag: ${{ needs.determine_changes_and_version.outputs.version-tag }}
+      version-tag: ${{ needs.create_new_version.outputs.version-tag }}
     secrets: inherit
 
   build_and_publish_front_end:
-    needs: determine_changes_and_version
+    needs: create_new_version
     uses: ./.github/workflows/build-and-publish-front-end.yml
     # The output is a string, hence the string comparison.
-    if: ${{ needs.determine_changes_and_version.outputs.front-end-paths-changed == 'true' }}
+    if: ${{ needs.create_new_version.outputs.front-end-paths-changed == 'true' }}
     with:
       version-tag: ${{ needs.compute-next-version.outputs.version-tag }}
     secrets: inherit
