--- a/.github/workflows/auto-merge-scala-steward-updates.yml
+++ b/.github/workflows/auto-merge-scala-steward-updates.yml
@@ -6,8 +6,15 @@ on:
       - main
 
 jobs:
+  check_user_name:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check if PR is from Scala Steward
+        run: |
+          echo ${{ github.event.pull_request.user.login }}
+
   call_auto_merge:
-    if: github.actor == 'scala-steward[bot]'
+    if: github.event.pull_request.user.login == 'scala-steward[bot]'
     uses: ./.github/workflows/auto-merge-pull-requests.yml
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
