Update Dependabot auto-merge

--- a/.github/workflows/auto-merge-dependabot-updates.yml
+++ b/.github/workflows/auto-merge-dependabot-updates.yml
@@ -9,7 +9,7 @@ jobs:
 
   # Dependabot mostly concerns GitHub Actions, so we only auto-merge non-major updates.
   fetch_metadata:
-    if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]' && github.event.action == 'opened'
+    if: github.event_name == 'pull_request' && github.actor == 'dependabot' && github.event.action == 'opened'
     runs-on: ubuntu-latest
     outputs:
       update-type: ${{ steps.dependabot-metadata.outputs.update-type }}
