--- a/.github/workflows/auto-merge-pull-requests.yml
+++ b/.github/workflows/auto-merge-pull-requests.yml
@@ -16,6 +16,8 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Log in to GitHub CLI
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
       - name: Approve Pull Request
         run: gh pr review --approve ${{ github.event.pull_request.html_url }}
       - name: Merge Pull Request
