Use specific token

--- a/.github/workflows/auto-merge-dependabot-updates.yml
+++ b/.github/workflows/auto-merge-dependabot-updates.yml
@@ -24,4 +24,4 @@ jobs:
     if: needs.fetch_metadata.outputs.update-type != 'version-update:semver-major'
     uses: ./.github/workflows/auto-merge-pull-requests.yml
     secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
+      github-token: ${{ secrets.AUTO_MERGE_TOKEN }}
