--- a/.github/workflows/auto-merge-scala-steward-updates.yml
+++ b/.github/workflows/auto-merge-scala-steward-updates.yml
@@ -14,4 +14,4 @@ jobs:
     if: github.event.pull_request.user.login == 'scala-steward'
     uses: ./.github/workflows/auto-merge-pull-requests.yml
     secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
+      github-token: ${{ secrets.AUTO_MERGE_TOKEN }}
