--- a/.github/workflows/auto-merge-pull-requests.yml
+++ b/.github/workflows/auto-merge-pull-requests.yml
@@ -7,15 +7,14 @@ on:
         description: 'GitHub token with permissions to approve and merge pull requests'
         required: true
 
-permissions:
-  pull-requests: write
-
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
+    env:
+      MERGE_TOKEN: ${{ secrets.github-token }}
     steps:
       - name: Log in to GitHub CLI
-        run: echo ${{ secrets.github-token }} | gh auth login --with-token
+        run: echo ${{ env.MERGE_TOKEN }} | gh auth login --with-token
       - name: Approve Pull Request
         run: gh pr review --approve ${{ github.event.pull_request.html_url }}
       - name: Merge Pull Request
