Use token correctly

--- a/.github/workflows/auto-merge-pull-requests.yml
+++ b/.github/workflows/auto-merge-pull-requests.yml
@@ -3,7 +3,7 @@ name: Auto-merge Pull Requests
 on:
   workflow_call:
     secrets:
-      github-token:
+      merge-token:
         description: 'GitHub token with permissions to approve and merge pull requests'
         required: true
 
@@ -11,10 +11,10 @@ jobs:
   auto-merge:
     runs-on: ubuntu-latest
     env:
-      MERGE_TOKEN: ${{ secrets.github-token }}
+      GH_TOKEN: ${{ secrets.merge-token }}
     steps:
       - name: Log in to GitHub CLI
-        run: echo ${{ env.MERGE_TOKEN }} | gh auth login --with-token
+        run: echo ${{ env.GH_TOKEN }} |gh auth login --with-token
       - name: Approve Pull Request
         run: gh pr review --approve ${{ github.event.pull_request.html_url }}
       - name: Merge Pull Request
