--- a/.github/workflows/auto-merge-pull-requests.yml
+++ b/.github/workflows/auto-merge-pull-requests.yml
@@ -7,18 +7,15 @@ on:
         description: 'GitHub token with permissions to approve and merge pull requests'
         required: true
 
-env:
-  GH_TOKEN: ${{ secrets.merge-token }}
-
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
     steps:
       - name: Debug length
         run: |
-          echo "Length of GH_TOKEN: ${#GH_TOKEN}"
+          echo ${{ secrets.merge-token }} | cut -c1 -c2 -c3
       - name: Log in to GitHub CLI
-        run: echo ${{ env.GH_TOKEN }} | gh auth login --with-token
+        run: echo ${{ secrets.merge-token }} | gh auth login --with-token
       - name: Approve Pull Request
         run: gh pr review --approve ${{ github.event.pull_request.html_url }}
       - name: Merge Pull Request
