Fix token issues (#472)
* Use secret directly

* Use correct command

* Debug output

* Remove job

* Inherit secrets

--- a/.github/workflows/auto-merge-scala-steward-updates.yml
+++ b/.github/workflows/auto-merge-scala-steward-updates.yml
@@ -16,5 +16,4 @@ jobs:
   call_auto_merge:
     if: github.event.pull_request.user.login == 'scala-steward'
     uses: ./.github/workflows/auto-merge-pull-requests.yml
-    secrets:
-      merge-token: ${{ secrets.AUTO_MERGE_TOKEN }}
+    secrets: inherit
