--- a/.github/workflows/auto-merge-pull-requests.yml
+++ b/.github/workflows/auto-merge-pull-requests.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Log in to GitHub CLI
-        run: echo ${{ secrets.AUTO_MERGE_TOKEN }} | gh auth login --with-token
+        run: echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
       - name: Approve Pull Request
         run: gh pr review --approve ${{ github.event.pull_request.html_url }}
       - name: Merge Pull Request
