Use other token (#474)
* Remove job

* Pass specific secrets

--- a/.github/workflows/auto-merge-pull-requests.yml
+++ b/.github/workflows/auto-merge-pull-requests.yml
@@ -2,13 +2,21 @@ name: Auto-merge Pull Requests
 
 on:
   workflow_call:
+    secrets:
+      merge-token:
+        description: 'GitHub token with permissions to approve and merge pull requests'
+        required: true
+
 
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
     steps:
+      - name: Debug length
+        run: |
+          echo "Length of GH_TOKEN: ${#GH_TOKEN}"
       - name: Log in to GitHub CLI
-        run: echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+        run: echo ${{ secrets.merge-token }} | gh auth login --with-token
       - name: Approve Pull Request
         run: gh pr review --approve ${{ github.event.pull_request.html_url }}
       - name: Merge Pull Request
