--- a/.github/workflows/auto-merge-scala-steward-updates.yml
+++ b/.github/workflows/auto-merge-scala-steward-updates.yml
@@ -6,14 +6,8 @@ on:
       - main
 
 jobs:
-  debug_length:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Debug length
-        run: |
-          echo {#{{ secrets.AUTO_MERGE_TOKEN }}} 
-
   call_auto_merge:
     if: github.event.pull_request.user.login == 'scala-steward'
     uses: ./.github/workflows/auto-merge-pull-requests.yml
-    secrets: inherit
+    secrets:
+      merge-token: ${{ secrets.AUTO_MERGE_TOKEN }}
