--- a/.github/workflows/auto-merge-dependabot-updates.yml
+++ b/.github/workflows/auto-merge-dependabot-updates.yml
@@ -9,7 +9,7 @@ jobs:
 
   # Dependabot mostly concerns GitHub Actions, so we only auto-merge non-major updates.
   fetch_metadata:
-    if: github.event_name == 'pull_request' && github.event.pull_request.user.login == 'dependabot[bot]'
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
     outputs:
       update-type: ${{ steps.dependabot-metadata.outputs.update-type }}
